改变图片位置

--- a/blogs/WebPack4/2021/01.md
+++ b/blogs/WebPack4/2021/01.md
@@ -15,15 +15,15 @@ categories:
 
 chunk 的字面意思就是代码块，在 webpack 中可以被理解为被抽象和包装过后的一些模块。它就像一个装着很多文件的文件袋，里面的文件就是各个模块，webpack 在外面加了一层包裹，从而形成了 chunk，根据具体配置不同，一个工程打包时可能会产生一个或多个 chunk。
 
-<img src="..\images\01.png" style="zoom:80%;" />
+<img src="/images/01.png" style="zoom:80%;" />
 
 Webpack 会从入口文件开始检索，并将具有依赖关系的模块生成一棵树，最终得到一个 chunk，由这个 chunk 得到的打包产物我们一般称之为 bundle。
 
-<img src="..\images\02.png" style="zoom:80%;" />
+<img src="/images/02.png" style="zoom:80%;" />
 
 在工程中可以定义多个入口，每一个入口都会产生一个结果资源，比如有两个入口 src/index.js 和 src/lib.js，一般会打包生成 dist/index.js 和 dist/lib.js，因此说 enry 和 bundle 存在对应关系。
 
-<img src="..\images\03.png" style="zoom:80%;" />
+<img src="/images/03.png" style="zoom:80%;" />
 
 在一些特殊情况下，一个入口也可能产生多个 chunk 并最终生成多个 bundle。
 
@@ -154,7 +154,7 @@ module.exports = {
 // 查看示例：demo1
 ```
 
-![](..\images\320.png)
+![](/images/320.png)
 
 - 多页面应用
 
@@ -183,7 +183,7 @@ module.exports = {
 // 查看示例 demo2
 ```
 
-![](..\images\321.png)
+![](/images/321.png)
 
 可以看到，我们将 react 和 react-dom 打包进了 vendor，之后再配置 optimization.splitChunks，将它们从各个页面中提取出来，生成单独的 bundle 即可。
 
@@ -202,7 +202,7 @@ module.exports = {
 // 查看示例：demo3
 ```
 
-![](..\images\322.png)
+![](/images/322.png)
 
 1. filename
 
