--- a/blogs/WebPack4/2021/07.md
+++ b/blogs/WebPack4/2021/07.md
@@ -43,7 +43,7 @@ module.exports = {
 }
 ```
 
-<img src="..\images\323.png" style="zoom:80%;" />
+<img src="/images/323.png" style="zoom:80%;" />
 
 2. webpack-merge
 
@@ -130,7 +130,7 @@ module.exports = {
 
 在每次执行 webpack 打包命令后，size-plugin 都会输出本次构建的资源体积，以及与上次构建相比体积变化了多少。
 
-<img src="..\images\324.png" style="zoom: 67%;" />
+<img src="/images/324.png" style="zoom: 67%;" />
 
 ### 模块热替换
 
@@ -187,7 +187,7 @@ if(module.hot) {
 
 第一步就是浏览器什么时候去拉取这些更新，这需要 webpack-dev-server 对本地资源文件进行监听，实际上 webpack-dev-server 与浏览器之间维护了一个 websocket，当本地资源发生变化时 webpack-dev-server 会向浏览器推送更新事件，并带上这次构建的 hash，让客户端与上一次资源进行对比。通过 hash 的比对可以防止冗余更新的出现，因为很多时候源文件的更改并不一定代码构建结果的更改（如添加了一个文件末尾空行等）。
 
-![](..\images\325.png)
+![](/images/325.png)
 
 这同时解释了为什么当我们开启了多个本地页面时，代码一改所有页面都会更新，当然 websocket 并不是只有开启了 HMR 才会有，live reload 其实也是依赖这个为实现的。
 
@@ -195,15 +195,15 @@ if(module.hot) {
 
 这部分信息并没有包含在刚刚的 websocket 中，因为刚刚我们只是想知道这个构建的结果是不是和上次一样。现在客户端已经知道新的构建结果和当前有了差别，就会向 webpack-dev-server 发起一个请求来获取更新文件的列表，即哪些模块有了改动，通常这个请求的名字为 [hash].hot-update.json
 
-![](..\images\326.png)
+![](/images/326.png)
 
 该返回结果告诉客户端，需要更新的 chunk 为 main，版本为 e388ea0f0e0054e37cee。这样客户端就可以再借助这些信息继续向 webpack-dev-server 获取该 chunk 的增量更新。
 
 下面是一个获取增量更新鹅接口的例子：
 
-![](..\images\327.png)
+![](/images/327.png)
 
-![](..\images\328.png)
+![](/images/328.png)
 
 现在客户端已经获得了 chunk 的更新，到这里有遇到另一个非常重要的问题，即客户端获取到这些增量更新之后如何处理呢？哪些状态需要保留？哪些又需要更新？这个就不属于 webpack 的工作了，但是它提供了相关的 API (如前面我们提到的 module.hot.accept)，开发者可以使用这些 API 针对自身的场景进行处理。像 react-hot-loader 和 vue-loader 也都是借助这些 API 来实现处理的。
 
@@ -236,7 +236,7 @@ if(module.hot)
 
 这段代码的意思是让 index.js 及其依赖只要发生了改变就在当前环境下全部重新执行一遍，但是我们发现它带来一个问题，在当前的运行时我们已经有了一个 setInterval，而每次 HMR 过后又会添加新的 setInterval，并没有对之前的进行清理，所以最后屏幕上有不同的数字闪来闪去。
 
-![](..\images\329.png)
+![](/images/329.png)
 
 为了避免这个问题，我们可以让 HMR 不对 index.js 生效，也就是说，当 index.js 发生改变时，就直接上整个页面刷新，以防止逻辑出现问题，但对于其他模块来说我们还想让 HMR 继续生效。
 
