--- a/blogs/WebPack4/2021/04.md
+++ b/blogs/WebPack4/2021/04.md
@@ -326,7 +326,7 @@ module.exports = {
 }
 ```
 
-<img src="/images/331.png" style="zoom:80%;" />
+<img src="/assets/images/331.png" style="zoom:80%;" />
 
 此处 webpack4 的配置与之前相比有两个不同：
 
